<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/iagreement_shape_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/iagreement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/iagreement_popup_title"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/iagreement_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/iagreement_desc"
        android:textColor="#262626"
        android:visibility="visible" />

    <TextView
        android:id="@+id/iagreement_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/iagreement_note"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/iagreement_ok"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/iagreement_shape_btn"
        android:gravity="center"
        android:text="@string/iagreement_agree"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/iagreement_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/iagreement_not"
        android:textStyle="bold" />

</LinearLayout>